<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instructionFragment">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="148dp"
            android:layout_height="156dp"
            android:contentDescription="instruction icon"
            android:src="@drawable/instructions"
            app:layout_constraintBottom_toTopOf="@+id/instruction1TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instruction1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instruction1Text"
            app:layout_constraintBottom_toTopOf="@+id/instruction2TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/instruction2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/instruction2Text"
            app:layout_constraintBottom_toTopOf="@+id/instruction3TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction1TextView" />

        <TextView
            android:id="@+id/instruction3TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/instruction3Text"
            app:layout_constraintBottom_toTopOf="@+id/showStoreButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction2TextView" />

        <Button
            android:id="@+id/showStoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showStoreButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction3TextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>